--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
                 >
                 <select
                   id="errorSystem"
-                  name="entry.900671353"
+                  name="entry.1234567890"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Error Sistem --</option>
@@ -68,7 +68,7 @@
                 >
                 <select
                   id="region"
-                  name="entry.453750574"
+                  name="entry.2345678901"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Region --</option>
@@ -81,7 +81,7 @@
                 >
                 <select
                   id="cabang"
-                  name="entry.27483305"
+                  name="entry.3456789012"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Cabang --</option>
@@ -99,7 +99,7 @@
                 <input
                   type="text"
                   id="NCust"
-                  name="entry.349701399"
+                  name="entry.4567890123"
                   class="form-control form-control-sm"
                 />
               </div>
@@ -110,7 +110,7 @@
                 <input
                   type="text"
                   id="IdCust"
-                  name="entry.1285711467"
+                  name="entry.5678901234"
                   class="form-control form-control-sm"
                 />
               </div>
@@ -125,7 +125,7 @@
                 <input
                   type="text"
                   id="pic"
-                  name="entry.1383050238"
+                  name="entry.6789012345"
                   class="form-control form-control-sm"
                   required
                 />
@@ -138,7 +138,7 @@
                 <input
                   type="text"
                   id="NoKwn"
-                  name="entry.1372652565"
+                  name="entry.7890123456"
                   class="form-control form-control-sm"
                   required
                 />
@@ -155,7 +155,7 @@
                 <input
                   type="text"
                   id="IdPolo"
-                  name="entry.163739172"
+                  name="entry.8901234567"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">Task ID Polo harus diisi!</div>
@@ -167,7 +167,7 @@
                 <input
                   type="text"
                   id="NoApp"
-                  name="entry.66506618"
+                  name="entry.9012345678"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">No APP harus diisi!</div>
@@ -183,7 +183,7 @@
                 <input
                   type="text"
                   id="NoOdrn"
-                  name="entry.996527903"
+                  name="entry.0123456789"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">No Odrn harus diisi!</div>
@@ -225,7 +225,7 @@
               >
               <textarea
                 id="issue"
-                name="entry.902491819"
+                name="entry.1234567891"
                 class="form-control form-control-sm"
                 rows="5"
                 required
@@ -480,57 +480,34 @@
           if (!valid) {
             Swal.fire("Error", message, "error");
           } else {
-            // Tentukan link Google Form berdasarkan Brand
-            let googleFormLink = "";
-            const brand = document.getElementById("brand").value;
+            try {
+              // Handle file uploads first
+              const uploadResults = await handleFileUploads();
+              
+              // Add file references to the form data
+              const formData = new FormData(this);
+              formData.append('uploadedPhotos', JSON.stringify(uploadResults.photos));
+              formData.append('uploadedVideos', JSON.stringify(uploadResults.videos));
 
-            if (brand === "nb") {
-              googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSdAIIAXXpbDmdO8qtWnyAgutCopPTGDhL5-tprvCKts1yZG0w/formResponse";
-            } else if (brand === "mas") {
-              googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSeICODvzS46C_yN3W7G2WPq9QnN5FAZcj_Cm1KiDu52akapuA/formResponse";
-            } else if (brand === "mtr") {
-              googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSdnVEYF8LUO_irXpkrQSBKWIG__fh3tw4ClkqtNwFfKB2SB2Q/formResponse";
-            } else if (brand === "mbl") {
-              googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSeUfH1Y4ct2KJXm6dVIvb8yO44qWGfJpVAP9M-TFSgrg2PDzQ/formResponse";
-            } else {
-              valid = false;
-              message = "Pilih brand yang valid!";
-            }
+              // Submit the form
+              const form = document.getElementById("faqForm");
+              form.action = "https://docs.google.com/forms/d/e/1FAIpQLSd4QnQuXr5LnkGxuUAFz42uF8J5VcjsDgmoRKKEe_iklgjKOQ/formResponse";
+              form.method = "POST";
+              form.submit();
 
-            if (valid) {
-              try {
-                // Handle file uploads first
-                const uploadResults = await handleFileUploads();
-                
-                // Add file references to the form data
-                const formData = new FormData(this);
-                formData.append('uploadedPhotos', JSON.stringify(uploadResults.photos));
-                formData.append('uploadedVideos', JSON.stringify(uploadResults.videos));
-
-                // Submit the form
-                const form = document.getElementById("faqForm");
-                form.action = googleFormLink;
-                form.method = "POST";
-                form.submit();
-
-                // Show success message
-                Swal.fire(
-                  "Berhasil!",
-                  "Formulir dan file berhasil dikirim.",
-                  "success"
-                );
-              } catch (error) {
-                console.error('Error during form submission:', error);
-                Swal.fire(
-                  "Error!",
-                  "Terjadi kesalahan saat mengirim formulir.",
-                  "error"
-                );
-              }
+              // Show success message
+              Swal.fire(
+                "Berhasil!",
+                "Formulir dan file berhasil dikirim.",
+                "success"
+              );
+            } catch (error) {
+              console.error('Error during form submission:', error);
+              Swal.fire(
+                "Error!",
+                "Terjadi kesalahan saat mengirim formulir.",
+                "error"
+              );
             }
           }
         });
