--- a/form.html
+++ b/form.html
@@ -26,14 +26,14 @@
           <h5 class="mb-0 small">Isi Form FAQ</h5>
         </div>
         <div class="card-body">
-          <form id="faqForm" method="POST" enctype="multipart/form-data">
+          <form id="faqForm" method="POST" enctype="multipart/form-data" action="https://docs.google.com/forms/d/e/1FAIpQLSfTsmZENU8N6ghi_BrSFDTGzD4590wTvEBMjgCAPHwFZvplLw/formResponse">
 
             <div class="row mb-2">
               <div class="col-md-6">
                 <label for="brand" class="form-label small text-muted"
                   >Brand</label
                 >
-                <select id="brand" name="entry.861983899" class="form-select form-select-sm" required>
+                <select id="brand" name="entry.2005620554" class="form-select form-select-sm" required>
                   <option value="">-- Pilih Brand --</option>
                   <option value="nb">Reguler</option>
                   <option value="mas">MasKu</option>
@@ -48,7 +48,7 @@
                 >
                 <select
                   id="errorSystem"
-                  name="entry.1095040348"
+                  name="entry.1045781291"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Error Sistem --</option>
@@ -66,7 +66,7 @@
                 >
                 <select
                   id="region"
-                  name="entry.1222026439"
+                  name="entry.839337160"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Region --</option>
@@ -79,7 +79,7 @@
                 >
                 <select
                   id="cabang"
-                  name="entry.2107528609"
+                  name="entry.1065046570"
                   class="form-select form-select-sm"
                 >
                   <option value="">-- Pilih Cabang --</option>
@@ -95,7 +95,7 @@
                 <input
                   type="text"
                   id="NCust"
-                  name="entry.40245468"
+                  name="entry.1166974658"
                   class="form-control form-control-sm"
                 />
               </div>
@@ -106,7 +106,7 @@
                 <input
                   type="text"
                   id="IdCust"
-                  name="entry.1941291136"
+                  name="entry.1972370246"
                   class="form-control form-control-sm"
                 />
               </div>
@@ -119,7 +119,7 @@
                 <input
                   type="text"
                   id="pic"
-                  name="entry.2106221406"
+                  name="entry.1234567890"
                   class="form-control form-control-sm"
                   required
                 />
@@ -132,7 +132,7 @@
                 <input
                   type="text"
                   id="NoKwn"
-                  name="entry.912746287"
+                  name="entry.9876543210"
                   class="form-control form-control-sm"
                   required
                 />
@@ -147,7 +147,7 @@
                 <input
                   type="text"
                   id="IdPolo"
-                  name="entry.915304343"
+                  name="entry.1122334455"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">Task ID Polo harus diisi!</div>
@@ -159,7 +159,7 @@
                 <input
                   type="text"
                   id="NoApp"
-                  name="entry.1870465535"
+                  name="entry.5544332211"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">No APP harus diisi!</div>
@@ -173,7 +173,7 @@
                 <input
                   type="text"
                   id="NoOdrn"
-                  name="entry.751992806"
+                  name="entry.6677889900"
                   class="form-control form-control-sm"
                 />
                 <div class="invalid-feedback">No Odrn harus diisi!</div>
@@ -202,7 +202,7 @@
               >
               <textarea
                 id="issue"
-                name="entry.420799577"
+                name="entry.2005620554"
                 class="form-control form-control-sm"
                 rows="5"
                 required
@@ -466,18 +466,19 @@ function submitFormData(formData, folderUrl = "") {
             // Tentukan link Google Form berdasarkan Brand
             let googleFormLink = "";
             const brand = document.getElementById("brand").value;
+
             if (brand === "nb") {
               googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSdAIIAXXpbDmdO8qtWnyAgutCopPTGDhL5-tprvCKts1yZG0w/formResponse";
+                "https://docs.google.com/forms/d/e/1FAIpQLSfTsmZENU8N6ghi_BrSFDTGzD4590wTvEBMjgCAPHwFZvplLw/formResponse";
             } else if (brand === "mas") {
               googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSeICODvzS46C_yN3W7G2WPq9QnN5FAZcj_Cm1KiDu52akapuA/formResponse";
+                "https://docs.google.com/forms/d/e/1FAIpQLSfTsmZENU8N6ghi_BrSFDTGzD4590wTvEBMjgCAPHwFZvplLw/formResponse";
             } else if (brand === "mtr") {
               googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSdnVEYF8LUO_irXpkrQSBKWIG__fh3tw4ClkqtNwFfKB2SB2Q/formResponse";
+                "https://docs.google.com/forms/d/e/1FAIpQLSfTsmZENU8N6ghi_BrSFDTGzD4590wTvEBMjgCAPHwFZvplLw/formResponse";
             } else if (brand === "mbl") {
               googleFormLink =
-                "https://docs.google.com/forms/d/e/1FAIpQLSeUfH1Y4ct2KJXm6dVIvb8yO44qWGfJpVAP9M-TFSgrg2PDzQ/formResponse";
+                "https://docs.google.com/forms/d/e/1FAIpQLSfTsmZENU8N6ghi_BrSFDTGzD4590wTvEBMjgCAPHwFZvplLw/formResponse";
             } else {
               valid = false;
               message = "Pilih brand yang valid!";
