penambahan console log

--- a/form.html
+++ b/form.html
@@ -272,6 +272,7 @@ document.getElementById("faqForm").addEventListener("submit", async function(e) 
 
         // Submit ke Google Form
         submitFormData(formData);
+        log.console(formData);
       } else {
         Swal.fire("Error", "Gagal mengupload file ke imgbb", "error");
       }
