--- a/form.html
+++ b/form.html
@@ -272,7 +272,8 @@ document.getElementById("faqForm").addEventListener("submit", async function(e) 
 
         // Submit ke Google Form
         submitFormData(formData);
-        log.console(formData);
+        // console.log(formData);
+        console.log(formData);
       } else {
         Swal.fire("Error", "Gagal mengupload file ke imgbb", "error");
       }
