[UPDATE] tambahan console log pada form.html

--- a/form.html
+++ b/form.html
@@ -272,6 +272,9 @@ document.getElementById("faqForm").addEventListener("submit", async function(e) 
 
         // Submit ke Google Form
         submitFormData(formData);
+        // console.log(formData);
+        // console.log(formData);
+        console.log(`Form Data : ${formData}`);
       } else {
         Swal.fire("Error", "Gagal mengupload file ke imgbb", "error");
       }
