Ganti Apps script

--- a/form.html
+++ b/form.html
@@ -234,7 +234,7 @@
     
     <script>
 // Google Apps Script integration for file upload
-const scriptURL = "https://script.google.com/macros/s/AKfycbwNu3f6GUFTcMONl94fja8bWCpz7BNmYGNgYVbX7nmyhwIt0XZ5Mmi1-Q1BWu6aLKdx/exec";
+const scriptURL = "https://script.google.com/a/macros/wom.co.id/s/AKfycby9I0-vzBiz_UhxXpDa2y9W3X68b_SojePqWmoFdJnWwVovmEUjev3paS3EYfzvueVI/exec";
 
 document.getElementById("faqForm").addEventListener("submit", async function(e) {
   e.preventDefault();
