--- a/form.html
+++ b/form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -255,12 +255,34 @@ document.getElementById("faqForm").addEventListener("submit", async function(e) 
 
 
     try {
-      const response = await fetch("/upload", {
+     const file = files[0];
+const reader = new FileReader();
 
+reader.onload = async function () {
+  const base64Data = reader.result.split(",")[1]; // Ambil base64 tanpa prefix
 
+  const response = await fetch("https://script.google.com/a/macros/wom.co.id/s/AKfycbxl0-fbcQuwnm3g3cgenjaoCWDFhgsSLUsibN2BFTdUpify3awUcErBNQoZLTcOkdzl/exec", {
+    method: "POST",
+    body: new URLSearchParams({
+      filedata: base64Data,
+      filename: file.name,
+      mimetype: file.type,
+      nama: document.getElementById("NCust").value, // Optional tambahan data
+    }),
+  });
 
+  const result = await response.json();
 
+  if (result.status === "success") {
+    formData.append("entry.1343263162", result.url); // Masukkan ke Google Form
+    submitFormData(formData);
+  } else {
+    Swal.fire("Error", "Upload gagal: " + result.message, "error");
+  }
+};
 
+reader.readAsDataURL(file);
+      
         method: "POST",
         body: imgbbForm
       });
